src/test/deca/syntax/parser/invalid/wrong_spelling.deca
{
    int x = 5;
    whil (x < 10) {
        println("x est inférieur à 10");
    x++;
    }
}